tests/vertical-slice/reject/match_predicate_captured_scrutinee.hew
type Pair { tag: i64, a: string, b: string }

fn main() -> i64 {
    let value = Pair { tag: 0, a: "a" + "x", b: "b" + "y" };
    let classify = || match value {
        Pair { tag: 0, a, b: _ } => a.len(),
        Pair { tag: _, a: _, b: _ } => 2,
    };
    classify()
}
